clang/test/BSC/Generic/StructAndFunction/undefined_member_call.cbs
// RUN: %clang_cc1 -verify %s

struct S<T>{    // expected-error {{conflicting types for 'S'}} expected-note {{while declaring the implicit copy constructor for 'S<int>'}} expected-note {{previous definition is here}}
  T a;
};

void test() {
  struct S<int> s1;
  int a = s1.x;    // expected-error {{no member named 'x' in 'struct S<int>'}}
}